@@ -7,7 +7,7 @@ Author: Laure Cougnaud
 Maintainer: Laure Cougnaud <laure.cougnaud@openanalytics.eu>
 Description: Creation of report with customizable visualization of patient profiles.
 Imports: ggplot2, plyr, cowplot, tools, reshape2, knitr, glpgStyle, grid, dplyr, stringr, glpgUtilityFct (>= 0.5.0), parallel
-Suggests: pander, shiny, vdiffr, testthat
+Suggests: pander, shiny, vdiffr, testthat, grDevices
 License: file LICENSE
 RoxygenNote: 6.1.0
 VignetteBuilder: knitr
